# ssd

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE
src/: CMakeLists.txt  main.cpp
